--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ gunicorn = "==19.9.0"
 itsdangerous = "==1.1.0"
 Jinja2 = "==2.10.1"
 MarkupSafe = "==1.1.1"
-nltk = "==3.4.1"
+nltk = "*"
 numpy = "==1.16.3"
 pytz = "==2019.1"
 scikit-learn = "==0.20.3"
