--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,8 @@ scipy = "==1.2.1"
 six = "==1.12.0"
 sklearn = "==0.0"
 Werkzeug = "==0.15.2"
+textblob = "*"
+rouge = "==0.3.1"
 
 [dev-packages]
 
