--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,12 @@ Jinja2==2.10.1
 MarkupSafe==1.1.1
 nltk==3.4.1
 numpy==1.16.3
+pkg-resources==0.0.0
 pytz==2019.1
+rouge==0.3.1
 scikit-learn==0.20.3
 scipy==1.2.1
 six==1.12.0
 sklearn==0.0
+textblob==0.15.3
 Werkzeug==0.15.2
