--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,8 @@ Jinja2==2.10.1
 MarkupSafe==1.1.1
 nltk==3.4.1
 numpy==1.16.3
-pkg-resources==0.0.0
+pandas==0.24.2
+python-dateutil==2.8.0
 pytz==2019.1
 rouge==0.3.1
 scikit-learn==0.20.3
